# Computer-Graphics

1lab/src/: main.py
2lab/src/: .gitignore  CMakeLists.txt  Figure.h  GlobalSystem.cpp  GlobalSystem.h  Math.cpp  Math.h  Matrix.h  Object.cpp  Object.h  Observer.cpp  Observer.h  Polygon.cpp  Polygon.h  RightPyramid.cpp  RightPyramid.h  RightTruncatedPyramid.cpp  RightTruncatedPyramid.h  Scene.cpp  Scene.h  Vector.h  main.cpp
